# advent-of-code

./: .gitignore  Cargo.toml  Justfile  output  run.sh
2018/: Cargo.toml  Justfile
2018/src/: day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_08.rs  day_09.rs  day_12.rs  day_14.rs  day_15.rs  day_16.rs  day_18.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  main.rs
2019/: Cargo.toml
2019/data/: day_21.txt  day_24.txt
2019/src/: day_01.rs  day_02.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_11.rs  day_12.rs  day_14.rs  day_15.rs  day_18.rs  day_19.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  graph.rs  main.rs  vector2.rs  (+1 more)
2020/: Cargo.toml  README.md
2021/: Justfile  pyproject.toml
2021/aoc2021/: __main__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
2021/data/: day_24.txt
2021/tests/: test_aoc2021.py  test_aoc2021_day_08.py  test_aoc2021_day_18.py
src/: asm.rs  day1.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day8.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_19_sa.rs  day_20.rs  day_22.rs  day_24.rs  (+5 more)
(+24 files in other folders)
