
[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Thomas Braibant <thomas.braibant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2.6"
lazy_static = "1.4.0"
nom = "6.1.2"
crossterm = "0.20.0"