[tool.poetry]
name = "Advent of Code 2021"
version = "0.1.0"
description = ""
authors = ["Thomas Braibant <thomas.braibant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
z3-solver = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
